<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Silent</string>
    <string name="action_settings">Settings</string>
    <string name="add_create_event_button">Create New Event</string>
    <string name="general_tab">General</string>
    <string name="toggle_tab">Toggle</string>
    <string name="time_text">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="frequency_text">Frequency</string>
    <string name="event_name_hint">Event Name …</string>
    <string name="repeating_days">Select Repeating Days</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_string">Repeating Days</string>
    <string name="date_string">Event Date</string>
    <string name="even_end_text">Event Ends On...</string>
    <string name="toggle_title">Add New Toggle</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="eventEndChkbox">is End Date for event</string>
    <string name="ringer_normal">Normal</string>
    <string name="ringer_vibrate">Vibrate</string>
    <string name="ringer_silent">Silent</string>
    <string name="about_this_app">About This App</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="select_toggles">Select Toggles</string>

</resources>
