<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#fffaf6">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:text="@string/select_toggles"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/ringerToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
            
        <ToggleButton
            android:id="@+id/alarmToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="Alarm\nNormal"
            android:textOn="Alarm\nSilent" />

        <ToggleButton
            android:id="@+id/mediaToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="Media\nNormal"
            android:textOn="Media\nSilent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ToggleButton
            android:id="@+id/wifiToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="Wi-Fi\nON"
            android:textOn="Wi-Fi\nOFF" />

        <ToggleButton
            android:id="@+id/bluetoothToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="Bluetooth\nON"
            android:textOn="Bluetooth\nOFF" />

        <ToggleButton
            android:id="@+id/mobileDataToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="Mobile Data\nON"
            android:textOn="Mobile Data\nOFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBackButtonClick"
            android:text="@string/back"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onFinishButtonClick"
            android:text="@string/finish"
            style="?android:attr/buttonStyle" />
    </LinearLayout>

</RelativeLayout>